Fix: Survey tool has bottom cut off as u go from desktop to smaller sizes

--- a/src/assets/stylesheets/functions.css
+++ b/src/assets/stylesheets/functions.css
@@ -61,7 +61,7 @@
     position: relative;
     padding-bottom: 57.5%;
     /*16:9*/
-    min-height: 25rem;
+    min-height: 52rem;
     overflow: hidden;
 }
 
